# duckdb_rdkit

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  demo.sql  extension_config.cmake  linux_conda_env.yml  osx_conda_env.yml  output.csv  pg_substructure.sql  query1_log_file.txt  query2_log_file.txt  querysc1_log_file.txt  querysc2_log_file.txt  querysc3_log_file.txt  starter_conda_env.yml  substructure.sql  top100_substruct_sql_queries.csv  top100_substructure_queries.csv  um_expt_setup.sql  umbra_exact_match.sql  umbra_substruct_cheml.sql  umbra_substructure.sql  vcpkg.json
.github/workflows/: ExtensionTemplate.yml  MainDistributionPipeline.yml  _extension_deploy.yml  _extension_distribution.yml  linux_build.yml  macos_build.yml
docs/: README.md
experiments/: Dockerfile  compose.yaml  download_chembl.py  make_chembl_duckdb.sql  pyproject.toml  queries.sql  queries.txt
notes/: rdkit-vcpkg-port.md
scripts/: bootstrap-template.py
src/: cast.cpp  duckdb_rdkit_extension.cpp  fingerprints.cpp  mol_compare.cpp  mol_descriptors.cpp  mol_formats.cpp  qed.cpp  quack_extension.cpp  types.cpp  umbra_mol.cpp
src/core/: types.cpp
src/include/: cast.hpp  common.hpp  duckdb_rdkit_extension.hpp  fingerprints.hpp  mol_compare.hpp  mol_descriptors.hpp  mol_formats.hpp  qed.hpp  quack_extension.hpp  types.hpp  umbra_mol.hpp
src/sdf_scanner/: buffered_sdf_reader.cpp  plain_sdf_reader.cpp  sdf_functions.cpp  sdf_reader.cpp  sdf_scan.cpp
test/nodejs/: duckdb_rdkit_test.js
test/python/: duckdb_rdkit_test.py
(+27 files in other folders)
